# terminal-weather

./: .dupes-ignore.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PR_REVIEW_2026-04-18.md  README.md  demo.cast  dist-workspace.toml  fix_actionability.py  patch.diff  record-demo.sh  run_perf.sh  test_dir_creation  test_dir_creation.rs  test_perf  test_perf.rs  test_simple_perf.sh
.Jules/: bolt.md  palette.md  sentinel.md
.agent/: EVIDENCE.md  PLANS.md
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
scripts/: capture_fullscreen_screenshot.sh  case-collision-gate.sh  check.sh  ci-local.sh  codacy-complexity-gate.sh  codacy-coverage.sh  complexity-audit.sh  complexity-gate.sh  coverage-thresholds.env  coverage.sh  duplication-gate.sh  file-length-audit.sh  record-demo.sh
src/: cli.rs  lib.rs  main.rs  test_support.rs  update.rs
src/app/: events.rs  mod.rs  settings.rs  state.rs
src/app/settings/: tests.rs
src/app/settings/tests/: cli_mapping.rs  permissions.rs  persistence.rs  recent_location.rs
src/app/state/: input.rs  methods_async.rs  methods_fetch.rs  methods_ui.rs  settings.rs  tests.rs
src/app/state/methods_async/: command_bar.rs  command_parse.rs  lifecycle.rs  tests.rs
src/app/state/methods_fetch/: tests.rs
src/app/state/methods_ui/: city_picker.rs  settings.rs
src/app/state/settings/: adjust.rs  options.rs
src/data/: forecast.rs  geocode.rs  geoip.rs  http.rs  mod.rs  silhouette.rs
src/data/geocode/: tests.rs
src/domain/: alerts.rs  mod.rs  weather.rs
src/domain/weather/: conditions.rs  conversions.rs  insights.rs  tests.rs  types.rs
src/domain/weather/insights/: derive.rs  mod.rs  types.rs
src/domain/weather/tests/: aqi_tests.rs  conversion_tests.rs  conversions_tests.rs  daypart_tests.rs  insight_tests.rs  refresh_tests.rs
src/resilience/: backoff.rs  freshness.rs  mod.rs
src/ui/: animation.rs  footer.rs  layout.rs  mod.rs  narrative.rs  particles.rs  symbols.rs  tests.rs  theme.rs
src/ui/theme/: basic16.rs  capability.rs  contrast.rs  data.rs  extended.rs  quantize.rs  resolve.rs  tests.rs
src/ui/theme/auto/: mod.rs  palette.rs  signal.rs
src/ui/theme/data/: mod.rs
src/ui/theme/tests/: auto.rs  explicit.rs  mod.rs  resolve.rs
src/ui/widgets/: alerts.rs  city_picker.rs  daily.rs  help.rs  hero.rs  hourly.rs  landmark.rs  mod.rs  selector.rs  settings.rs  shared.rs
src/ui/widgets/city_picker/: tests.rs
src/ui/widgets/daily/: layout.rs  loading.rs  summary.rs  table.rs  (+1 more)
tests/: bench_forecast_optimization.rs  caching.rs  flows.rs  freshness_integration.rs  geocode_ambiguity.rs  property_range_bar.rs  render_snapshots.rs
tests/common/: mod.rs
tests/snapshots/: render_snapshots__100x30_chart.snap  render_snapshots__100x30_help_overlay.snap  render_snapshots__100x30_help_overlay.snap.new  render_snapshots__100x30_hybrid.snap  render_snapshots__120x40_chart.snap  render_snapshots__120x40_clear.snap  render_snapshots__120x40_clear.snap.new  render_snapshots__120x40_hybrid.snap  render_snapshots__120x40_hybrid.snap.new  render_snapshots__19x9_tiny_fallback.snap  render_snapshots__40x15_fog.snap  render_snapshots__60x20_chart.snap  render_snapshots__60x20_hybrid.snap  render_snapshots__60x20_snow.snap  render_snapshots__80x24_chart.snap  render_snapshots__80x24_hybrid.snap  render_snapshots__80x24_offline_badge.snap  render_snapshots__80x24_rain.snap  render_snapshots__80x24_rain_with_aqi.snap  render_snapshots__80x24_stale_retry_badge.snap  render_snapshots__80x24_syncing_badge.snap  render_snapshots__80x24_thunder.snap
(+62 files in other folders)
