[package]
name = "terminal-weather"
version = "0.3.0"
edition = "2024"
description = "Animated terminal weather dashboard"
license = "MIT"
homepage = "https://github.com/markpasternak/terminal-weather"
repository = "https://github.com/markpasternak/terminal-weather"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
rand = "0.9"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }

[dev-dependencies]
insta = { version = "1.42", features = ["yaml"] }
proptest = "1.6"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "sync"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
